new problems added